5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1637_2704.log
== TEST (2019-04-09 10:49:50) 
-- CODE:
x = float(input(" digite um numero: "))
if (0>=x>=8<=10)
	print("S")
else
-- ERROR:
File "XXXX", line 2
    if (0>=x>=8<=10)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:03) 
-- CODE:
x = float(input(" digite um numero: "))
if (0>= x>=8<=10):
	print("S")
else
-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:08) 
-- CODE:
x = float(input(" digite um numero: "))
if (0>= x>=8<=10):
	print("S")

-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:19) 
-- CODE:
x = float(input(" digite um numero: "))
if (0>= x>=8<=10):
	print("S")

-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:27) 
-- CODE:
x = float(input(" digite um numero: "))
if (0>= x>=8<=10):
	print("S")

-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:38) 
-- CODE:
x = float(input(" digite um numero: "))
if (0>= x>=8<=10):
	print("S")

-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:03) 
-- CODE:
x = float(input(" digite um numero: "))
if (x>=8):
	print("S")

-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:42) 
-- CODE:
x = float(input(" digite um numero: "))
if (x>=8):
	print("S")
else:
	print("N")

-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:51:46) 
-- CODE:
x = float(input(" digite um numero: "))
if (x>=8):
	print("S")
else:
	print("N")

-- EXECUTION TIME:
0.164888
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:24) 
-- CODE:
x = float(input(" digite um numero: "))
if (x>=8):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:53:29) 
-- CODE:
x = float(input(" digite um numero: "))
if (x>=8):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- EXECUTION TIME:
0.135587
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:28) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: "))
if (b.upper() == S):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b.upper() == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:39) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: ")
if (b.upper() == S):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- ERROR:
File "XXXX", line 3
    if (b.upper() == S):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:47) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: "))
if (b.upper() == S):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b.upper() == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:06) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:58:15) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- EXECUTION TIME:
0.139251
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:59:39) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:59:52) 
-- CODE:
x = float(input(" digite um numero: "))
b = (input("digite o valor para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- EXECUTION TIME:
0.166799
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:04) 
-- CODE:
x = float(input("digite um numero: "))
b = (input("digite para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	print("N")
	x1 = x
print(x1)
-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:47) 
-- CODE:
x = float(input("digite um numero: "))
b = (input("digite para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	(b.upper()== "N")
	x1 = x
print(x1)
-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:00:55) 
-- CODE:
x = float(input("digite um numero: "))
b = (input("digite para S/N: "))
if (b.upper() == "S"):
	print("S")
	x1 = x + x*0.1
else:
	(b.upper()== "N")
	x1 = x
print(x1)
-- EXECUTION TIME:
0.135964
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
S
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:22) 
-- CODE:
x = float(input("digite um numero: "))
b = (input("digite para S/N: "))
if (b.upper() == "S"):
	x1 = x + x*0.1
else:
	(b.upper()== "N")
	x1 = x
print(x1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:28) 
-- CODE:
x = float(input("digite um numero: "))
b = (input("digite para S/N: "))
if (b.upper() == "S"):
	x1 = x + x*0.1
else:
	(b.upper()== "N")
	x1 = x
print(x1)
-- EXECUTION TIME:
0.143232
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
